--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Patch Generator</title>
+  <meta charset="UTF-8" />
+  <title>Git-Compatible Patch Generator</title>
   <style>
     body { font-family: sans-serif; margin: 2rem; }
     textarea { width: 100%; height: 150px; margin-bottom: 1rem; }
     pre { background: #f4f4f4; padding: 1rem; white-space: pre-wrap; word-wrap: break-word; }
+    button { padding: 0.5rem 1rem; margin-top: 0.5rem; }
   </style>
 </head>
 <body>
-  <h2>Patch Generator</h2>
+  <h2>Git-Compatible Patch Generator</h2>
+
+  <label>File Name (e.g., src/constants.cc):</label>
+  <input id="filename" type="text" style="width: 100%; margin-bottom: 1rem;" />
+
   <label>Original Text:</label>
   <textarea id="original"></textarea>
 
   <label>Modified Text:</label>
   <textarea id="modified"></textarea>
 
-  <button onclick="generatePatch()">Generate Patch</button>
+  <button onclick="generateGitPatch()">Generate Git Patch</button>
 
   <h3>Generated Patch:</h3>
   <pre id="output"></pre>
 
-  <script src="https://unpkg.com/diff-match-patch"></script>
+  <script src="https://cdn.jsdelivr.net/npm/diff@5.1.0/dist/diff.min.js"></script>
   <script>
-    function generatePatch() {
-      const dmp = new diff_match_patch();
+    function generateGitPatch() {
+      const fileName = document.getElementById('filename').value || 'file.txt';
       const original = document.getElementById('original').value;
       const modified = document.getElementById('modified').value;
-      const diffs = dmp.diff_main(original, modified);
-      dmp.diff_cleanupSemantic(diffs);
-      const patch = dmp.patch_toText(dmp.patch_make(original, diffs));
+
+      const patch = Diff.createTwoFilesPatch(
+        fileName,
+        fileName,
+        original,
+        modified,
+        'original',
+        'modified',
+        { context: 3 }
+      );
+
       document.getElementById('output').textContent = patch;
     }
   </script>
